--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+      with:
+        node-version: '20'
     - name: Deploy to VPS
       env:
         HOST: ${{ secrets.HOST }}
