github action test 1

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,9 +21,10 @@ jobs:
     - name: Deploy to VPS
       env:
         VPS_HOST: ${{ secrets.HOST }}
-        VPS_USER: tradeloop
+        VPS_USER: root
       run: |
         ssh $VPS_USER@$VPS_HOST '
-          cd ~/tradeloop-functions
+          cd ..
+          cd home/tradeloop/tradeloop-functions
           git pull
         '
