--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,14 @@ jobs:
       with:
         ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
+    - name: Get host key
+      run: |
+        ssh-keyscan -H ${{ secrets.HOST }} >> ~/.ssh/known_hosts
+  
+    - name: Disable host key checking
+      run: |
+        echo "StrictHostKeyChecking no" >> ~/.ssh/config
+
     - name: Deploy to VPS
       env:
         VPS_HOST: ${{ secrets.HOST }}
