--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,10 +11,10 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Install SSH Key
-      uses: webfactory/ssh-agent@v0.5.0
+      uses: webfactory/ssh-agent@v0.9.0
       with:
         ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
@@ -33,5 +33,5 @@ jobs:
       run: |
         ssh $VPS_USER@$VPS_HOST '
           cd tradeloop-functions
-          git pull
+          git pull git@github.com:ajayvignesh01/tradeloop-functions.git
         '
