--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to Hetzner CAX
+name: Deploy to Hetzner CAX11 Supabase
 
 on:
   push:
@@ -17,14 +17,6 @@ jobs:
       uses: webfactory/ssh-agent@v0.9.0
       with:
         ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-
-    - name: Get host key
-      run: |
-        ssh-keyscan -H ${{ secrets.HOST }} >> ~/.ssh/known_hosts
-  
-    - name: Disable host key checking
-      run: |
-        echo "StrictHostKeyChecking no" >> ~/.ssh/config
 
     - name: Deploy to VPS
       env:
